fix(ui): Table/Metric - fix vertical alignment

--- a/packages/ui/src/ui/table/table.module.css
+++ b/packages/ui/src/ui/table/table.module.css
@@ -10,7 +10,7 @@
 .cell {
   border: 1px solid var(--color-gray-ultra-light);
   border-width: 1px 0 0;
-  padding: var(--space-xsmall) var(--space-small);
+  padding: var(--space-small) var(--space-small);
   text-align: left;
 }
 
